# desktop-pet

./: .gitignore  AGENTS.md  README.md  ai_client.py  build.spec  chat_window.py  index.html  interaction.py  main.py  package-lock.json  package.json  pet.py  pet_view_model.py  renderer.py  requirements.txt  settings.py  settings_dialog.py  sprite_player.py  styles.py  test_chat_window.py  test_pet.py  test_settings.py  test_tools.py  tools.py  tsconfig.json  vite.config.ts
.superpowers/brainstorm/94982-1779416490/state/: server-stopped
docs/: macos-transparency-bug.md
docs/superpowers/plans/: 2026-05-22-desktop-pet-plan.md  2026-05-25-ai-agent-plan.md
docs/superpowers/specs/: 2026-05-22-desktop-pet-design.md  2026-05-25-ai-agent-design.md  2026-05-25-cute-pet-ui-design.md
resources/ui/: PetPanel.qml
src/: interaction.ts  main.ts  pet.ts  renderer.ts  shop.ts  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
