[package]
name = "desktop-pet"
version = "1.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
